--- a/Salarios.ipynb
+++ b/Salarios.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div id=cc32a689-4ab8-4fa0-879d-18efbf1a2b9b style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands?.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('cc32a689-4ab8-4fa0-879d-18efbf1a2b9b').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=1746979c-72cf-4725-98a1-10cf3f7f6c6a style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands?.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('1746979c-72cf-4725-98a1-10cf3f7f6c6a').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -254,7 +254,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div id=76f524dd-be1c-47df-83a7-9dfd2bc56135 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands?.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('76f524dd-be1c-47df-83a7-9dfd2bc56135').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=b095e150-564c-4633-99e4-26972d1a0981 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands?.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('b095e150-564c-4633-99e4-26972d1a0981').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -418,38 +418,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0   NaN\n",
-      "1   NaN\n",
-      "2   NaN\n",
-      "3   NaN\n",
-      "4   NaN\n",
-      "Name: Total, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Convertimos la columna a tipo numérico\n",
-    "salarios_df['Total'] = pd.to_numeric(salarios_df['Total'], errors='coerce')\n",
-    "\n",
-    "# Verificamos el resultado\n",
-    "print(salarios_df['Total'].head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Comunidades_Autonomas     Sector          Tipo_Coste  Periodo  Total\n",
-      "0             Andalucía  Industria  Sueldos y salarios     2023    NaN\n",
-      "1             Andalucía  Industria  Sueldos y salarios     2022    NaN\n",
-      "2             Andalucía  Industria  Sueldos y salarios     2021    NaN\n",
-      "3             Andalucía  Industria  Sueldos y salarios     2020    NaN\n",
-      "4             Andalucía  Industria  Sueldos y salarios     2019    NaN\n"
+      "  Comunidades_Autonomas     Sector          Tipo_Coste  Periodo      Total\n",
+      "0             Andalucía  Industria  Sueldos y salarios     2023  25.915,32\n",
+      "1             Andalucía  Industria  Sueldos y salarios     2022  25.069,75\n",
+      "2             Andalucía  Industria  Sueldos y salarios     2021  23.746,67\n",
+      "3             Andalucía  Industria  Sueldos y salarios     2020  22.426,66\n",
+      "4             Andalucía  Industria  Sueldos y salarios     2019  23.548,70\n"
      ]
     }
    ],
@@ -459,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -486,11 +460,11 @@
      "output_type": "stream",
      "text": [
       "Número de valores nulos en cada columna:\n",
-      "Comunidades_Autonomas      0\n",
-      "Sector                     0\n",
-      "Tipo_Coste                 0\n",
-      "Periodo                    0\n",
-      "Total                    306\n",
+      "Comunidades_Autonomas    0\n",
+      "Sector                   0\n",
+      "Tipo_Coste               0\n",
+      "Periodo                  0\n",
+      "Total                    0\n",
       "dtype: int64\n"
      ]
     }
@@ -504,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
