--- a/Poblacion_con_teletrabajo.ipynb
+++ b/Poblacion_con_teletrabajo.ipynb
@@ -1383,10 +1383,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_final_gst_salario.to_csv('Poblacion_Salarios_Gastos.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
