--- a/Poblacion_Teletrabajo.ipynb
+++ b/Poblacion_Teletrabajo.ipynb
@@ -2191,10 +2191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_pivot_teletrabajo.to_csv('Poblacion_Teletrabajo_Limpia.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
