--- a/Group-7/Seg_ana_est.ipynb
+++ b/Group-7/Seg_ana_est.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "\n",
-    "df_aband_est = pd.read_csv('C:/Users/Ro/OneDrive/Escritorio/No se como llamarlo/Ironhack/L L remoto/Segundo intento/aban_estudios_limpio_01.csv', sep = ';')\n",
-    "df_niv_est_pob = pd.read_csv('C:/Users/Ro/OneDrive/Escritorio/No se como llamarlo/Ironhack/L L remoto/Segundo intento/niv_est_com.csv', sep = ';')"
+    "df_aband_est = pd.read_csv('./aban_estudios_limpio_01.csv', sep = ';')\n",
+    "df_niv_est_pob = pd.read_csv('./niv_est_com.csv', sep = ';')"
    ]
   },
   {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
